# Collate

./: .gitignore  LICENSE  README.md  collate.bat  vercel.json
crates/collate-core/: Cargo.toml
crates/collate-core/src/: comments.rs  docx.rs  lib.rs  matcher.rs  paragraphs.rs  tests.rs  track_changes.rs  types.rs
site/: index.html
tests/: generate-fixtures.mjs
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  wasm.ts
web/src/__mocks__/: wasm.ts
web/src/__tests__/: components.test.tsx  export-html.test.ts  setup.ts  store.test.ts
web/src/components/: CollatedView.tsx  CommentCard.tsx  ExplainerPage.tsx  ExportPanel.tsx  FileUpload.tsx  ManualCommentForm.tsx  ParagraphBlock.tsx  PrivacyBadge.tsx  SearchBar.tsx  Sidebar.tsx  TrackChangeView.tsx
web/src/hooks/: useCollateStore.ts
web/src/lib/: export-html.ts  export-json.ts
web/src/styles/: index.css
