[package]
name = "collate-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
wasm-opt = true
opt-level = "s"
lto = true
